# client_news

./: .env  Cargo.toml  start_web.sh
headlines/: Cargo.toml
headlines/src/: headlines.rs  lib.rs  main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs
webapp/: index.html
