[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

description = "A simple cli news reader app"
license = "MIT"
authors = ["Sivkov Sergey"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
dotenv = "0.15.0"
newsapi = { path = "./newsapi", features = ["async"] }
termimad = "0.20.1"
tokio = { version = "1.18.2", features = ["full"] }
